Se arreglo que la entrada del menú principal cerraba la aplicación cuando no se ingresaba un número, tambien se mejoró el toString de los autores para que se vea mejor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=challenge_literalura
-spring.datasource.url=jdbc:postgresql://localhost/literalura
+spring.datasource.url=jdbc:postgresql://localhost/${DB_NAME}
 spring.datasource.username=postgres
-spring.datasource.password=lap789654
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
